# storage_tracker_BE_public

./: .gitignore  Dockerfile  README.md  compose.yaml  database.tar  db_init.py  db_interface.py  dev-requirements.txt  entrypoint.sh  pyproject.toml  requirements.txt  todo.txt  tox.ini
.github/workflows/: ci.yml
diagrams/: project.puml
scripts/: export.cmd  seed_db.py
storage_tracker/: main.py
storage_tracker/database/: classes.py  db.py
test/: conftest.py  test_main.py
